deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app
  labels:
    app: python-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
        - name: python-app
          image: mabhidevops/python-web-app:v1
          volumeMounts:
            - name: db-connection
              mountPath: /opt
          ports:
            - containerPort: 8000
      volumes:
        - name: db-connection
          configMap:
            name: test-cm
